feat: staff-checkin (#34)
* chore: update gen token script

remove faculty-wide, it was a bad idea

* feat: staff checkin

* fix: not null

* chore: remove debug
